@@ -83,49 +83,11 @@ lme.to.glm <- function(mod) {
 # model as follows.  It is of class c("fakeglm", "glm", "lm")
 # several items are added to the created objects. Do not export
 
-
-mer.to.glm <- function(mod, KR=require("pbkrtest", quietly=TRUE)) {
-# object$family$family doesn't work correctly with negative binomial links and glms because of the
-# argument in the link function, so the old line
-#   family <- family(mod)
-# returns an error message for these models.  The following kluge fixes this
-  object <- mod@resp
-  if(class(object) == "glmResp") {
-     name <- if(substr(object$family$family, 1, 17) == "Negative Binomial")
-             "negative.binomial" else object$family$family
-     arg <- if(name == "negative.binomial") 
-       list(as.numeric(gsub("\\)", "", gsub("\\(", "", substr(object$family$family, 18, 100))))) else
-       list()
-     family <- if (is.null(object$family$initialize))
-       do.call(name, arg) else object$family} else {
-  family <- family(mod)
-       }
-# end
-  link <- family$link
-  family <- family$family
-  cl <- mod@call
-  if(cl[[1]] =="nlmer") stop("effects package does not support 'nlmer' objects")
-  m <- match(c("formula", "family", "data", "weights", "subset", 
-               "na.action", "start", "offset",  
-               "model", "contrasts"), names(cl), 0L)
-  cl <- cl[c(1L, m)]
-  cl[[1L]] <- as.name("glm")
-  cl$formula <- fixmod(as.formula(cl$formula))
-  mod2 <- eval(cl)
-  mod2$coefficients <- lme4::fixef(mod) #mod@fixef
-  mod2$vcov <- if (family == "gaussian" && link == "identity" && KR) as.matrix(pbkrtest::vcovAdj(mod)) else as.matrix(vcov(mod))
-  mod2$linear.predictors <- model.matrix(mod2) %*% mod2$coefficients
-  mod2$fitted.values <- mod2$family$linkinv(mod2$linear.predictors)
-  mod2$weights <- as.vector(with(mod2,
-                                 prior.weights * (family$mu.eta(linear.predictors)^2 /
-                                                    family$variance(fitted.values))))
-  mod2$residuals <- with(mod2,
-                         prior.weights * (y - fitted.values)/weights )
-  class(mod2) <- c("fakeglm", class(mod2))
-  mod2
-}
-
-mer.to.glm <- function(mod, KR=require("pbkrtest", quietly=TRUE)) {
+mer.to.glm <- function(mod, KR=FALSE) {
+  if(KR & !require("pbkrtest", quietly=TRUE)){
+    KR <- FALSE
+    warning("pbkrtest is not available, KR set to FALSE")
+  }  
   # object$family$family doesn't work correctly with the negative binomial family because of the
   # argument in the family function, so the old line
   #   family <- family(mod)
@@ -179,13 +141,13 @@ vcov.fakeglm <- function(object, ...) object$vcov
 
 #The next six functions should be exported
 
-effect.mer <- function(term, mod, vcov.=vcov, KR=require("pbkrtest", quietly=TRUE), ...) {
+effect.mer <- function(term, mod, vcov.=vcov, KR=FALSE, ...) {
     result <- effect(term, mer.to.glm(mod, KR=KR), vcov., ...)
     result$formula <- as.formula(formula(mod))
     result
     }
     
-effect.merMod <- function(term, mod, vcov.=vcov, KR=require("pbkrtest", quietly=TRUE), ...){
+effect.merMod <- function(term, mod, vcov.=vcov, KR=FALSE, ...){
     effect.mer(term, mod, vcov.=vcov, KR=KR, ...)
 }
 
@@ -196,11 +158,11 @@ effect.lme <- function(term, mod, ...) {
   result
 }
 
-allEffects.mer <- function(mod, KR=require("pbkrtest", quietly=TRUE),...){
+allEffects.mer <- function(mod, KR=FALSE,...){
   allEffects(mer.to.glm(mod,KR=KR), ...)
 }
 
-allEffects.merMod <- function(mod, KR=require("pbkrtest", quietly=TRUE),...){
+allEffects.merMod <- function(mod, KR=FALSE,...){
   allEffects(mer.to.glm(mod,KR=KR), ...)
 }
  
